Map spacing fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -182,7 +182,7 @@ main {
 
 .mapDiv {
   border-style: outset;
-  height: 100%;
+  height: 350px;
 }
 
 .copyLogo {
