--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -41,7 +41,7 @@
 }
 .mapDiv {
 	border-style: outset;
-	height: 100%;
+	height: 350px;
 }
 .copyLogo {
 	width: 15px;
